Base classes added.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ bin
 /UT.Keycloak.NET.Client.FluentAPI/obj
 /Keycloak.NET.Client.FluentAPI/.vs/Keycloak.NET.Client.FluentAPI/DesignTimeBuild
 /Keycloak.NET.Client.FluentAPI/Keycloak.NET.Client.FluentAPI/Keycloak.NET.Client.FluentAPI.csproj.user
+obj
+bin
+/.vs/CQRSlite.Extensions/v16
+/CQRSlite.Extensions/.vs
