--- a/pack.nuspec
+++ b/pack.nuspec
@@ -1,35 +1,37 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 		<metadata>
-			<id>Keycloak.NET.Client.FluentAPI</id>
-			<version>1.2.1.13</version>
+			<id>CQRSlite.Extensions</id>
+			<version>1.0.0.0</version>
+			<description>Extensions of CQRSlite package provided as a set of base classes.</description>
 			<authors>barimale</authors>
 			<owners>barimale</owners>
 			<requireLicenseAcceptance>false</requireLicenseAcceptance>
-			<projectUrl>https://github.com/barimale/Keycloak.NET.Client.FluentAPI</projectUrl>
-			<tags>Keycloak.NET</tags>
-			<description>Fluent API builder for desktop based apps</description>
+			<projectUrl>https://github.com/barimale/CQRSlite.Extensions</projectUrl>
+			<tags>CQRSlite</tags>
 			<dependencies>
 				<group targetFramework=".NETFramework4.7">
-					<dependency id="Flurl.Http" version="2.4.2" exclude="Build,Analyzers"/>
-					<dependency id="Newtonsoft.Json" version="12.0.2" exclude="Build,Analyzers"/>
-					<dependency id="System.IdentityModel.Tokens.Jwt" version="5.6.0" exclude="Build,Analyzers"/>
-					<dependency id="SAML2" version="3.0.0.6" exclude="Build,Analyzers"/>
-					<dependency id="Keycloak.Net" version="1.0.4" exclude="Build,Analyzers"/>
+					<dependency id="ConfigurationManager.Api" version="1.3.7.8" exclude="Build,Analyzers" />
+					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
+					<dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
+					<dependency id="Ninject" version="3.3.4" exclude="Build,Analyzers" />
+					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
+					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
 				</group>
 				<group targetFramework=".NETStandard2.0">
-					<dependency id="Flurl.Http" version="2.4.2" exclude="Build,Analyzers"/>
-					<dependency id="Newtonsoft.Json" version="12.0.2" exclude="Build,Analyzers"/>
-					<dependency id="System.IdentityModel.Tokens.Jwt" version="5.6.0" exclude="Build,Analyzers"/>
-					<dependency id="SAML2" version="3.0.0.6" exclude="Build,Analyzers"/>
-					<dependency id="Keycloak.Net" version="1.0.4" exclude="Build,Analyzers"/>
+					<dependency id="ConfigurationManager.Api" version="1.3.7.8" exclude="Build,Analyzers" />
+					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
+					<dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
+					<dependency id="Ninject" version="3.3.4" exclude="Build,Analyzers" />
+					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
+					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
 				</group>
 			</dependencies>
 		</metadata>
 	<files>
-		<file src="Keycloak.NET.Client.FluentAPI\bin\Release\netstandard2.0\Keycloak.NET.Client.FluentAPI.dll" target="lib\netstandard2.0" />
-		<file src="Keycloak.NET.Client.FluentAPI\bin\Release\netstandard2.0\Keycloak.NET.Client.FluentAPI.pdb" target="lib\netstandard2.0" />
-		<file src="Keycloak.NET.Client.FluentAPI\bin\Release\net47\Keycloak.NET.Client.FluentAPI.dll" target="lib\net47" />
-		<file src="Keycloak.NET.Client.FluentAPI\bin\Release\net47\Keycloak.NET.Client.FluentAPI.pdb" target="lib\net47" />
+		<file src="lib\net47\CQRSlite.Extensions.dll" target="lib\net47\CQRSlite.Extensions.dll" />
+		<file src="lib\netstandard2.0\CQRSlite.Extensions.dll" target="lib\netstandard2.0\CQRSlite.Extensions.dll" />
+		<file src="lib\net47\CQRSlite.Extensions.pdb" target="lib\net47\CQRSlite.Extensions.pdb" />
+		<file src="lib\netstandard2.0\CQRSlite.Extensions.pdb" target="lib\netstandard2.0\CQRSlite.Extensions.pdb" />
 	</files>
 </package>
