--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet build .\CQRSlite.Extensions.sln --configuration Release
 
     - name: Nuget Pack
-      run: nuget pack .\CQRSlite.Extensions\pack.nuspec -Properties Configuration=Release -OutputDirectory .\nugetPackages -Symbols -SymbolPackageFormat snupkg 
+      run: nuget pack .\pack.nuspec -Properties Configuration=Release -OutputDirectory .\nugetPackages -Symbols -SymbolPackageFormat snupkg 
 
     - name: Nuget Push2
       run: nuget push .\nugetPackages\*.nupkg -Source GitHub 
