--- a/pack.nuspec
+++ b/pack.nuspec
@@ -29,9 +29,9 @@
 			</dependencies>
 		</metadata>
 	<files>
-		<file src="lib\net47\CQRSlite.Extensions.dll" target="lib\net47\CQRSlite.Extensions.dll" />
-		<file src="lib\netstandard2.0\CQRSlite.Extensions.dll" target="lib\netstandard2.0\CQRSlite.Extensions.dll" />
-		<file src="lib\net47\CQRSlite.Extensions.pdb" target="lib\net47\CQRSlite.Extensions.pdb" />
-		<file src="lib\netstandard2.0\CQRSlite.Extensions.pdb" target="lib\netstandard2.0\CQRSlite.Extensions.pdb" />
+		<file src="lib\net47\CQRSlite.Extensions.dll" target="lib\net47" />
+		<file src="lib\netstandard2.0\CQRSlite.Extensions.dll" target="lib\netstandard2.0" />
+		<file src="lib\net47\CQRSlite.Extensions.pdb" target="lib\net47" />
+		<file src="lib\netstandard2.0\CQRSlite.Extensions.pdb" target="lib\netstandard2.0" />
 	</files>
 </package>
