--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,8 +30,11 @@ jobs:
     - name: Nuget Pack
       run: nuget pack .\pack.nuspec -Properties Configuration=Release -OutputDirectory .\nugetPackages -Symbols -SymbolPackageFormat snupkg 
 
-    - name: Nuget Push2
-      run: nuget push .\nugetPackages\*.nupkg -Source GitHub 
-
+    - name: Nuget Pack SQL
+      run: nuget pack .\packSQL.nuspec -Properties Configuration=Release -OutputDirectory .\nugetPackages -Symbols -SymbolPackageFormat snupkg 
+    
     - name: Nuget Push
       run: nuget push .\nugetPackages\*.nupkg -Source "https://api.nuget.org/v3/index.json"
+
+    - name: Nuget Push2
+      run: nuget push .\nugetPackages\*.nupkg -Source GitHub 
