--- a/packSQL.nuspec
+++ b/packSQL.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 		<metadata>
-			<id>CQRSlite.Extensions</id>
+			<id>CQRSlite.SQL.Extensions</id>
 			<version>1.0.1</version>
-			<description>Extensions of CQRSlite package provided as a set of base classes.</description>
+			<description>Extensions of CQRSlite package provided as a set of features in the context of SQL read model.</description>
 			<authors>barimale</authors>
 			<owners>barimale</owners>
 			<requireLicenseAcceptance>false</requireLicenseAcceptance>
 			<projectUrl>https://github.com/barimale/CQRSlite.Extensions</projectUrl>
-			<tags>CQRSlite</tags>
+			<tags>CQRSlite; ReadModel; SQL</tags>
 			<dependencies>
 				<group targetFramework=".NETFramework4.7">
 					<dependency id="ConfigurationManager.Api" version="1.3.7.8" exclude="Build,Analyzers" />
