--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       run: nuget pack .\packSQL.nuspec -Properties Configuration=Release -OutputDirectory .\nugetPackages -Symbols -SymbolPackageFormat snupkg 
     
     - name: Nuget Push
-      run: nuget push .\nugetPackages\*.nupkg -Source "https://api.nuget.org/v3/index.json"
+      run: nuget push .\nugetPackages\*.nupkg -Source "https://api.nuget.org/v3/index.json" -SkipDuplicate -NoSymbols
 
     - name: Nuget Push2
-      run: nuget push .\nugetPackages\*.nupkg -Source GitHub 
+      run: nuget push .\nugetPackages\*.nupkg -Source GitHub -SkipDuplicate
