--- a/packSQL.nuspec
+++ b/packSQL.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 		<metadata>
 			<id>CQRSlite.SQL.Extensions</id>
-			<version>1.0.3</version>
+			<version>1.0.4</version>
 			<description>Extensions of CQRSlite package provided as a set of features in the context of SQL read model.</description>
 			<authors>barimale</authors>
 			<owners>barimale</owners>
@@ -26,6 +26,22 @@
 					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
 					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
 				</group>
+				<group targetFramework=".NETStandard2.1">
+					<dependency id="ConfigurationManager.Api" version="1.3.7.8" exclude="Build,Analyzers" />
+					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
+					<dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
+					<dependency id="Ninject" version="3.3.4" exclude="Build,Analyzers" />
+					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
+					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
+				</group>
+				<group targetFramework=".NETCoreApp3.0">
+					<dependency id="ConfigurationManager.Api" version="1.3.7.8" exclude="Build,Analyzers" />
+					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
+					<dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
+					<dependency id="Ninject" version="3.3.4" exclude="Build,Analyzers" />
+					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
+					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
+				</group>
 			</dependencies>
 		</metadata>
 	<files>
@@ -33,5 +49,9 @@
 		<file src="CQRSlite.Extensions\bin\Release\net47\CQRSlite.Extensions.pdb" target="lib\net47" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.0\CQRSlite.Extensions.dll" target="lib\netstandard2.0" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.0\CQRSlite.Extensions.pdb" target="lib\netstandard2.0" />
+		<file src="CQRSlite.Extensions\bin\Release\netstandard2.1\CQRSlite.Extensions.dll" target="lib\netstandard2.1" />
+		<file src="CQRSlite.Extensions\bin\Release\netstandard2.1\CQRSlite.Extensions.pdb" target="lib\netstandard2.1" />
+		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.0\CQRSlite.Extensions.dll" target="lib\netcoreapp3.0" />
+		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.0\CQRSlite.Extensions.pdb" target="lib\netcoreapp3.0" />
 	</files>
 </package>
