--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,15 +8,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Set fix for nuget setup
-      run: echo "ACTIONS_ALLOW_UNSECURE_COMMANDS=true" >> $GITHUB_ENV
-      
     - uses: actions/checkout@master
 
     - uses: actions/setup-dotnet@v1
 
     - name: Setup Nuget
-      uses: warrenbuckley/Setup-Nuget@v1
+      uses: NuGet/setup-nuget@v1
 
     - name: Nuget Add source 
       run: nuget sources Add -Name "GitHub" -Source "https://nuget.pkg.github.com/barimale/index.json" -UserName barimale -Password ${{ secrets.VS2019 }}
