--- a/CQRSlite.Extensions/CQRSlite.Extensions.csproj
+++ b/CQRSlite.Extensions/CQRSlite.Extensions.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.0;netstandard2.1;netstandard2.0;net47</TargetFrameworks>
-    <AssemblyVersion>1.0.6.0</AssemblyVersion>
-    <FileVersion>1.0.6.0</FileVersion>
-    <Version>1.0.6.0</Version>
+    <TargetFrameworks>netcoreapp3.1;netstandard2.1;netstandard2.0;net47;net8.0</TargetFrameworks>
+	  <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
+    <Version>2.0.0.0</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>barimale</Authors>
     <Description>Extensions of CQRSlite package provided as a set of base classes.</Description>
@@ -15,13 +15,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ConfigurationManager.Api" Version="1.3.7.9" />
-    <PackageReference Include="CqrsLite" Version="0.29.0" />
-    <PackageReference Include="Microsoft.Windows.Compatibility" Version="3.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Ninject" Version="3.3.4" />
+    <PackageReference Include="ConfigurationManager.Api" Version="2.3.7.9" />
+    <PackageReference Include="CqrsLite" Version="1.35.0" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="8.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Ninject" Version="3.3.6" />
     <PackageReference Include="SqlTableDependency" Version="8.5.8" />
-    <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+    <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
