--- a/pack.nuspec
+++ b/pack.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
 		<metadata>
 			<id>CQRSlite.Extensions</id>
-			<version>1.0.7</version>
+			<version>2.0.0</version>
 			<description>Extensions of CQRSlite package provided as a set of base classes.</description>
 			<authors>barimale</authors>
 			<owners>barimale</owners>
@@ -10,6 +10,14 @@
 			<projectUrl>https://github.com/barimale/CQRSlite.Extensions</projectUrl>
 			<tags>CQRSlite</tags>
 			<dependencies>
+				<group targetFramework="net8.0">
+					<dependency id="ConfigurationManager.Api" version="1.3.7.9" exclude="Build,Analyzers" />
+					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
+					<dependency id="Newtonsoft.Json" version="12.0.3" exclude="Build,Analyzers" />
+					<dependency id="Ninject" version="3.3.4" exclude="Build,Analyzers" />
+					<dependency id="SqlTableDependency" version="8.5.6" exclude="Build,Analyzers" />
+					<dependency id="System.Collections.Immutable" version="1.7.0" exclude="Build,Analyzers" />
+				</group>
 				<group targetFramework=".NETFramework4.7">
 					<dependency id="ConfigurationManager.Api" version="1.3.7.9" exclude="Build,Analyzers" />
 					<dependency id="CqrsLite" version="0.29.0" exclude="Build,Analyzers" />
@@ -45,13 +53,15 @@
 			</dependencies>
 		</metadata>
 	<files>
+		<file src="CQRSlite.Extensions\bin\Release\net8.0\CQRSlite.Extensions.dll" target="lib\net8.0" />
+		<file src="CQRSlite.Extensions\bin\Release\net8.0\CQRSlite.Extensions.pdb" target="lib\net8.0" />
 		<file src="CQRSlite.Extensions\bin\Release\net47\CQRSlite.Extensions.dll" target="lib\net47" />
 		<file src="CQRSlite.Extensions\bin\Release\net47\CQRSlite.Extensions.pdb" target="lib\net47" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.0\CQRSlite.Extensions.dll" target="lib\netstandard2.0" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.0\CQRSlite.Extensions.pdb" target="lib\netstandard2.0" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.1\CQRSlite.Extensions.dll" target="lib\netstandard2.1" />
 		<file src="CQRSlite.Extensions\bin\Release\netstandard2.1\CQRSlite.Extensions.pdb" target="lib\netstandard2.1" />
-		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.0\CQRSlite.Extensions.dll" target="lib\netcoreapp3.0" />
-		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.0\CQRSlite.Extensions.pdb" target="lib\netcoreapp3.0" />
+		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.1\CQRSlite.Extensions.dll" target="lib\netcoreapp3.1" />
+		<file src="CQRSlite.Extensions\bin\Release\netcoreapp3.1\CQRSlite.Extensions.pdb" target="lib\netcoreapp3.1" />
 	</files>
 </package>
